2008-01-16  Daniel Nylander <po@danielnylander.se>

	* po/sv.po: Added Swedish translation.
	* po/LINGUAS: Added sv

2008-01-16  Mathias Hasselmann  <mathias@openismus.com>

	Separate between primary and secondary message in EpcPasswordDialog to
	match appearance of GtkMessageDialog. Correct label alignment issues.

	* libepc-ui/password-dialog.c: Add separate title label for primary
	message. Left-align username and password label. Give more space to
	characters to secondary label.
	* po/libepc.pot, po/de.po: Updating messages.

2008-01-16  Mathias Hasselmann  <mathias@openismus.com>

	Provide gettext support.

	* configure.ac: Update for gettext.
	* Makefile.am: Add libepc/i18n.c. Define LOCALEDIR.
	Add po folder and other gettext related stuff.
	* libepc/consumer.c, libepc/publisher.c, libepc/shell.c, libepc/tls.c,
	libepc-ui/password-dialog.c, libepc-ui/progress-window.c:
	Include libepc/i18n.h instead of glib/gi18n-lib.h.
	* libepc/i18n.c, libepc/i18n.h: Add epc_gettext.
	* examples/simple-publisher.c: Call setlocale for localization.
	* ABOUT-NLS, config.rpath, m4/*, po/*: Various gettextize artifacts.
	* po/de.po, po/LINGUAS: Add German translation.

2008-01-16  Mathias Hasselmann  <mathias@openismus.com>

	* configure.ac, Makefile.am: Integrate GNU gettext.
	* libepc/consumer.c, libepc/shell.c:

2008-01-16  Mathias Hasselmann  <mathias@openismus.com>

	Support building with srcdir != builddir - as far as possible:
	gtk-doc seems to be totaly broken regarding that topic.

	* libepc/*.c: Prefix local includes with libepc/.
	* Makefile.am: Use $(srcdir) where needed.

2008-01-16  Mathias Hasselmann  <mathias@openismus.com>

	Include just <libsoup/soup.h> when possible.

	* libepc/consumer.c: Include just <libsoup/soup.h>.
	* libepc/publisher.c: Include <libsoup/soup.h> instead of
	<libsoup/soup-socket.h>. All the other API isn't exported by
	<libsoup/soup.h> for some reason.

2008-01-16  Mathias Hasselmann  <mathias@openismus.com>
